[tool.poetry]
name = "robant"
version = "0.0.1"
description = "Operate on reStructuredText project notes"
authors = ["Andrew Burrow <albcorp@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
icontract = "^2.5.0"
requests-oauthlib = "^1.3.0"
Whoosh = "^2.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
