[tool.black]
line-length = 80
target-version = ['py38']
include = '\.py$'

[tool.poetry]
name = "robant"
version = "0.0.1"
description = "Maintain project notes and participate in external work flows"
authors = ["Andrew Burrow <albcorp@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~3.11"
PyYAML = "~5.4.1"
icontract = "~2.5.3"
jsonschema = "~3.2.0"
intervaltree = "~3.1.0"
pydantic = "~=1.8"

[tool.poetry.dev-dependencies]
black = "~20.8b1"
pytest = "~6.2.4"
Sphinx = "~3.5.3"

[tool.poetry.scripts]
robant = 'robant.console:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
